# travel-agent-hub

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: graph.py  supervisor.py  verifier.py
backend/app/api/: chat.py  deps.py  health.py  ingest.py  media.py  models.py  rag.py  routes.py  tools.py  trips.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agent.py  auth.py  chat.py  copywriting.py  health.py  history.py  kb.py  models.py  plan.py  preferences.py  rag.py  tools.py  user_kb.py
backend/app/core/: config.py  logging.py  response.py  security.py
backend/app/rag/: documents.py  indexer.py  retriever.py
backend/app/schemas/: auth.py  chat.py  common.py  media.py  rag.py  trips.py  user_kb.py
backend/app/services/: auth_service.py  context_memory.py  file_service.py  kb_governance.py  model_provider.py  session_store.py  user_kb_service.py
backend/app/tools/: __init__.py  travel_tools.py
backend/app/workers/: __init__.py  jobs.py
backend/tests/: test_agent_graph.py  test_agent_router.py  test_auth_service.py  test_config.py  test_context_memory.py  test_kb_governance.py  test_rag_split.py  test_response.py  test_session_store.py  test_travel_tools.py  test_user_kb_service.py  test_verifier.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
infra/: docker-compose.yml
scripts/: check_project_integrity.ps1  ingest_dataset.py
(+37 files in other folders)
