# 注释说明：该 TOML 文件保存后端工具配置，注释不改变构建或测试行为。
[project]
name = "travel-assistant-backend"
version = "0.1.0"
description = "FastAPI + LangChain backend for Travel Assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "sqlalchemy>=2.0.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "chromadb>=0.5.0",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.1",
  "pymupdf>=1.24.0",
  "pypdf>=4.3.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
